Continuous Integration with Github, Github Actions and Docker Hub

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,7 +23,7 @@ jobs:
          distribution: 'adopt'
          cache: maven
      - name: Build Application Jar
-       working-directory: ./rest-react-java/app
+       working-directory: ./rest-react-java/server
        run: mvn clean package -DskipTests
        
      - name: Docker Compose Build
