--- a/rest-react-java/docker-compose.yml
+++ b/rest-react-java/docker-compose.yml
@@ -23,8 +23,8 @@ services:
   rest-react-java-server:
     image: rest-react-java-server
     restart: always
-    build: ./app
-    working_dir: /app
+    build: ./server
+    working_dir: /server
     environment:
       TZ: America/Sao_Paulo
       SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_with_spring_boot_erudio?useSSL=false&useTimezone=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
