--- a/rest-react-java/03-UpRunningFromDockerHubImages/docker-compose.yml
+++ b/rest-react-java/03-UpRunningFromDockerHubImages/docker-compose.yml
@@ -21,10 +21,8 @@ services:
       - erudio-network
 
   rest-react-java-server:
-    image: rest-react-java-server
+    image: leandrocgsi/rest-react-java-server
     restart: always
-    build: ./server
-    working_dir: /server
     environment:
       TZ: America/Sao_Paulo
       SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_with_spring_boot_erudio?useSSL=false&useTimezone=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
