Adding API Server in ASP.NET 8

--- a/react-js-dotnet6-api/client/package.json
+++ b/react-js-dotnet6-api/client/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "axios": "^0.21.0",
+    "axios": "^1.6.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
