--- a/react-js-dotnet6-api/new_server/RestWithASPNETErudio/RestWithASPNETErudio/RestWithASPNETErudio.csproj
+++ b/react-js-dotnet6-api/new_server/RestWithASPNETErudio/RestWithASPNETErudio/RestWithASPNETErudio.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,14 @@
 		<InvariantGlobalization>true</InvariantGlobalization>
 		<RootNamespace>RestWithASPNETErudio</RootNamespace>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="WeatherForecast.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="RestWithASPNETErudio.http" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Evolve" Version="3.2.0" />
