--- a/react-js-dotnet6-api/new_server/RestWithASPNETErudio/RestWithASPNETErudio/RestWithASPNETErudio.csproj
+++ b/react-js-dotnet6-api/new_server/RestWithASPNETErudio/RestWithASPNETErudio/RestWithASPNETErudio.csproj
@@ -9,22 +9,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="WeatherForecast.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Remove="RestWithASPNETErudio.http" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Evolve" Version="3.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
-		<PackageReference Include="Asp.Versioning.Mvc" Version="7.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
+		<PackageReference Include="Asp.Versioning.Mvc" Version="8.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
 		<PackageReference Include="Serilog" Version="3.1.1" />
-		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
-		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
 	</ItemGroup>
 
 </Project>
