Adding API Server in ASP.NET 8 - Dockerized

--- a/.github/workflows/continuous-integration-dotnet.yml
+++ b/.github/workflows/continuous-integration-dotnet.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration with GitHub, GitHub Actions and Docker Hub
+name: .NET 8 Continuous Integration with GitHub, GitHub Actions and Docker Hub
 
 on:
   push:
