--- a/rest-react-dotnet/run-server-from-docker-images/docker-compose.yml
+++ b/rest-react-dotnet/run-server-from-docker-images/docker-compose.yml
@@ -2,12 +2,9 @@ version: '3.9'
 
 services:
   db:
-    image: rest-react-dotnet-server-db
+    image: leandrocgsi/rest-react-dotnet-server-db
     command: mysqld --default_authentication_plugin=caching_sha2_password
     restart: always
-    build:
-      context: .
-      dockerfile: db/Dockerfile
     environment:
       TZ: America/Sao_Paulo
       MYSQL_ROOT_PASSWORD: docker
@@ -24,17 +21,20 @@ services:
       - erudio-network
 
   rest-react-dotnet-server:
-    image: rest-react-dotnet-server
-    build:
-      context: .
-      dockerfile: RestWithASPNETErudio/Dockerfile
+    image: leandrocgsi/rest-react-dotnet-server
     restart: always
     environment:
       TZ: America/Sao_Paulo
       MySQLConnection__MySQLConnectionString: "Server=db;Port=3308;DataBase=rest_with_asp_net_udemy;Uid=docker;Pwd=docker"
+      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_HTTP_PORTS: 8080
+      ASPNETCORE_HTTPS_PORTS: 8081
     ports:
       - 4430:8080
       - 44300:8081
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
     depends_on:
       - db
     networks:
